--- a/src/App.css
+++ b/src/App.css
@@ -5,5 +5,5 @@ a.powered-by-firepad {
 a:link,a:hover,a:active,a:visited {
     color:rgb(0, 0, 0);
     text-decoration:none;
-    font-style:bold 
+    font-style:italic
 }
