--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,5 @@ a:link,a:hover,a:active,a:visited {
     text-decoration:none;
     font-style:italic
 }
+
+/* html { font-family: 'Inconsolata', monospace; } */
